Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24596

Assertion `state_ == s_exec || state_ == s_quitting' failed in wsrep::client_state::disable_streaming

    XMLWordPrintable

Details

    Description

      MDEV-22148 is not fixed. Unfortunately since there was a commit mentioning MDEV-22148 and it has already been released, re-opening it is against our common practices, so I have to create another one.

      RUN IT ON A NORMAL STANDALONE SERVER, NOT ON GALERA CLUSTER.

      SET SESSION wsrep_trx_fragment_size=DEFAULT;
      

      10.4 4afab3c7

      mysqld: /data/src/10.4/wsrep-lib/src/client_state.cpp:355: void wsrep::client_state::disable_streaming(): Assertion `state_ == s_exec || state_ == s_quitting' failed.
      210115  0:17:13 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f0929537f36 in __GI___assert_fail (assertion=0x55f3168438b8 "state_ == s_exec || state_ == s_quitting", file=0x55f316842fb8 "/data/src/10.4/wsrep-lib/src/client_state.cpp", line=355, function=0x55f316843888 "void wsrep::client_state::disable_streaming()") at assert.c:101
      #8  0x000055f3162f1c4a in wsrep::client_state::disable_streaming (this=0x7f0908006f38) at /data/src/10.4/wsrep-lib/src/client_state.cpp:355
      #9  0x000055f3158df113 in wsrep_trx_fragment_size_update (self=0x55f316df6fe0 <Sys_wsrep_trx_fragment_size>, thd=0x7f0908000d90) at /data/src/10.4/sql/wsrep_var.cc:753
      #10 0x000055f31553ef35 in sys_var::update (this=0x55f316df6fe0 <Sys_wsrep_trx_fragment_size>, thd=0x7f0908000d90, var=0x7f0908013690) at /data/src/10.4/sql/set_var.cc:214
      #11 0x000055f31553f5ca in sys_var::set_default (this=0x55f316df6fe0 <Sys_wsrep_trx_fragment_size>, thd=0x7f0908000d90, var=0x7f0908013690) at /data/src/10.4/sql/set_var.cc:295
      #12 0x000055f315540cbe in set_var::update (this=0x7f0908013690, thd=0x7f0908000d90) at /data/src/10.4/sql/set_var.cc:837
      #13 0x000055f315540922 in sql_set_variables (thd=0x7f0908000d90, var_list=0x7f0908005bd0, free=true) at /data/src/10.4/sql/set_var.cc:740
      #14 0x000055f315663275 in mysql_execute_command (thd=0x7f0908000d90) at /data/src/10.4/sql/sql_parse.cc:4994
      #15 0x000055f31566d087 in mysql_parse (thd=0x7f0908000d90, rawbuf=0x7f09080135b0 "SET SESSION wsrep_trx_fragment_size=DEFAULT", length=43, parser_state=0x7f091f4ff550, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:7958
      #16 0x000055f3156593af in dispatch_command (command=COM_QUERY, thd=0x7f0908000d90, packet=0x7f09080087b1 "SET SESSION wsrep_trx_fragment_size=DEFAULT", packet_length=43, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:1855
      #17 0x000055f315657c17 in do_command (thd=0x7f0908000d90) at /data/src/10.4/sql/sql_parse.cc:1373
      #18 0x000055f3157e6f07 in do_handle_one_connection (connect=0x55f3183660d0) at /data/src/10.4/sql/sql_connect.cc:1412
      #19 0x000055f3157e6c50 in handle_one_connection (arg=0x55f3183660d0) at /data/src/10.4/sql/sql_connect.cc:1316
      #20 0x000055f316207cd6 in pfs_spawn_thread (arg=0x55f3182b3a30) at /data/src/10.4/storage/perfschema/pfs.cc:1869
      #21 0x00007f0929db8609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #22 0x00007f0929623293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 4.5h
                  2d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.